<resources>
    <string name="app_name">AppPrueba</string>
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="signup_question">¿No tienes cuenta?</string>
    <string name="signup">Registrarse</string>
    <string name="register">Registro</string>
    <string name="signup_username">Ingresa tu nombre de usuario</string>
    <string name="signup_password">Ingresa tu contraseña</string>
    <string name="signup_confirm">Confirma tu contraseña</string>
    <string name="batters">Batters</string>
    <string name="toppings">Toppings</string>
    <string name="home_title">Información de productos</string>
    <string name="logout">Cerrar sesión</string>
    <string name="seeToppings">Ver toppings</string>
    <string name="seeList">Ver listado</string>
    <string name="seeBatters">Ver batters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>